Expand core systems and document Dongwon plugin